[project]
name = "cybersecurity-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-langchain>=0.12.1",
    "langgraph-supervisor>=0.0.31",
]
[tool.uv]
package = true

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.11",
]
